--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     ".prettierrc": "jsonc",
     ".eslintignore": "ignore"
   },
-  
+
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -26,5 +26,42 @@
     "test/**/__snapshots__": true,
     "package-lock.json": true,
     "*.{css,sass,scss}.d.ts": true
-  }
+  },
+  "cSpell.words": [
+    "Kullback",
+    "opis",
+    "базового",
+    "бінарна",
+    "бінарний",
+    "бінарної",
+    "бінарну",
+    "вектор",
+    "вектора",
+    "векторами",
+    "вигляд",
+    "відносно",
+    "відстаней",
+    "двома",
+    "дельти",
+    "еталонний",
+    "еталонного",
+    "задає",
+    "знайти",
+    "значення",
+    "значень",
+    "зображення",
+    "класу",
+    "кольорів",
+    "матриці",
+    "матрицю",
+    "матриця",
+    "Метод",
+    "необхідно",
+    "отримання",
+    "перетворення",
+    "перетворити",
+    "пошуку",
+    "який",
+    "якого"
+  ]
 }
