--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
   "cSpell.words": [
     "Kullback",
     "opis",
+    "Serie",
     "базового",
     "бінарна",
     "бінарний",
@@ -52,15 +53,22 @@
     "зображення",
     "класу",
     "кольорів",
+    "критерію",
     "матриці",
     "матрицю",
     "матриця",
     "Метод",
     "необхідно",
+    "область",
+    "Оптимальна",
+    "Оптимальний",
+    "Оптимізація",
     "отримання",
     "перетворення",
     "перетворити",
     "пошуку",
+    "Радіус",
+    "Робоча",
     "який",
     "якого"
   ]
