--- a/package.json
+++ b/package.json
@@ -99,7 +99,9 @@
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "react": "^18.2.0",
+    "react-charts": "^3.0.0-beta.54",
     "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
@@ -114,6 +116,7 @@
     "@types/node": "18.16.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-resizable": "^3.0.4",
     "@types/react-test-renderer": "^18.0.0",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
